--- a/hard-rock.html
+++ b/hard-rock.html
@@ -57,8 +57,8 @@
 
   <!-- site-hardrock-end -->
 
-   <!-- site-casinodetail-start -->
-   <div class="casinodetail">
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -97,19 +97,19 @@
             <p>Hard Rock Casino Vancouver&#39;s location in Coquitlam, just outside of Vancouver, is a great
               base for exploring the city and the surrounding natural beauty. You&#39;re not far from outdoor
               activities, shopping, and dining options in the Vancouver area.</p>
-              <h3>Conclusion:</h3>
-              <p>Hard Rock Casino Vancouver is a lively and dynamic destination for visitors from Canada,
-                offering a blend of gaming, live entertainment, and rock &#39;n&#39; roll spirit. Whether you&#39;re
-                looking to test your luck at the casino, enjoy live music, or immerse yourself in the energetic
-                atmosphere, this resort delivers it all. The staff&#39;s passion for creating a memorable
-                experience and the infusion of rock culture make it an ideal choice for those seeking an
-                electrifying and spirited getaway. As with any resort, remember to check for the latest
-                information and event updates, as offerings may evolve over time. Prepare to rock at Hard
-                Rock Casino Vancouver!</p>
+            <h3>Conclusion:</h3>
+            <p>Hard Rock Casino Vancouver is a lively and dynamic destination for visitors from Canada,
+              offering a blend of gaming, live entertainment, and rock &#39;n&#39; roll spirit. Whether you&#39;re
+              looking to test your luck at the casino, enjoy live music, or immerse yourself in the energetic
+              atmosphere, this resort delivers it all. The staff&#39;s passion for creating a memorable
+              experience and the infusion of rock culture make it an ideal choice for those seeking an
+              electrifying and spirited getaway. As with any resort, remember to check for the latest
+              information and event updates, as offerings may evolve over time. Prepare to rock at Hard
+              Rock Casino Vancouver!</p>
           </div>
           <div class="resturent-button new">
             <a href="https://www.hardrockcasinovancouver.com" target="_blank">Visit</a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -146,12 +146,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
