--- a/index.html
+++ b/index.html
@@ -248,12 +248,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
