--- a/riverock-casino.html
+++ b/riverock-casino.html
@@ -57,8 +57,8 @@
 
   <!-- site riverrockbanner end -->
 
-   <!-- site-casinodetail-start -->
-   <div class="casinodetail">
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -100,18 +100,18 @@
             <p>River Rock Casino Resort&#39;s location along the Fraser River provides a serene backdrop, with
               scenic views that add to the overall ambiance. The proximity to Vancouver International
               Airport and the city of Vancouver makes it a convenient destination for travelers.</p>
-              <h3>Conclusion:</h3>
-              <p>River Rock Casino Resort is a remarkable destination for visitors from Canada, offering a
-                combination of gaming, entertainment, opulent accommodations, and relaxation. Whether
-                you&#39;re looking to test your luck at the casino, indulge in a gourmet meal, or enjoy a world-
-                class show, this resort has it all. The attentive staff, luxurious surroundings, and serene
-                setting make it a top choice for those seeking a memorable and indulgent getaway. Be sure
-                to check for the latest information and updates, as offerings and events may evolve over
-                time. Enjoy your stay at River Rock Casino Resort!</p>
+            <h3>Conclusion:</h3>
+            <p>River Rock Casino Resort is a remarkable destination for visitors from Canada, offering a
+              combination of gaming, entertainment, opulent accommodations, and relaxation. Whether
+              you&#39;re looking to test your luck at the casino, indulge in a gourmet meal, or enjoy a world-
+              class show, this resort has it all. The attentive staff, luxurious surroundings, and serene
+              setting make it a top choice for those seeking a memorable and indulgent getaway. Be sure
+              to check for the latest information and updates, as offerings and events may evolve over
+              time. Enjoy your stay at River Rock Casino Resort!</p>
           </div>
           <div class="resturent-button new">
             <a href="https://riverrock.com/vancouver-casino-resort/" target="_blank">Visit</a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -148,12 +148,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
