--- a/caesars-windsor.html
+++ b/caesars-windsor.html
@@ -64,7 +64,8 @@
         <div class="col-12">
           <div class="casinodetail-text">
             <h3>Caesars Windsor Hotel & Casino: </h3>
-            <p>A Premier Entertainment Destination Situated in the heart of Windsor, Ontario, Caesars Windsor Hotel &amp; Casino is a top-tier
+            <p>A Premier Entertainment Destination Situated in the heart of Windsor, Ontario, Caesars Windsor Hotel
+              &amp; Casino is a top-tier
               entertainment and gaming destination that promises an unforgettable experience for
               visitors from Canada and beyond.</p>
             <h3>Gaming Experience:</h3>
@@ -113,7 +114,7 @@
           </div>
           <div class="resturent-button new">
             <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -149,12 +150,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
