--- a/casino-dulacleamy.html
+++ b/casino-dulacleamy.html
@@ -108,7 +108,7 @@
           </div>
           <div class="resturent-button new">
             <a href="https://casinos.lotoquebec.com/en/lacleamy/home" target="_blank">Visit</a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -144,16 +144,14 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
-            <div class="footer-mails">
-              <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+              <h3>Email</h3>
+              <div class="footer-mails">
+                  <div class="mails-names">
+                      <a href="mailto:">info@gigacasinos.com</a>
+                  </div>
               </div>
-            </div>
           </div>
-        </div>
+      </div>
       </div>
     </div>
   </div>
