--- a/casinode-monttremblant.html
+++ b/casinode-monttremblant.html
@@ -57,48 +57,48 @@
 
   <!-- site-Monttremblantbanner-end -->
 
- <!-- site-casinodetail-start -->
- <div class="casinodetail">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="casinodetail-text">
-          <h3>Casino de Mont-Tremblant:</h3>
-          <p>A Charming Gaming Retreat in the Laurentian Mountains
-            Casino de Mont-Tremblant, nestled in the picturesque Laurentian Mountains of Quebec,
-            offers a unique and intimate gaming experience for visitors from Canada seeking a tranquil
-            yet thrilling retreat.</p>
-          <h3>Gaming Experience:</h3>
-          <p>Despite its smaller scale compared to some larger casinos, Casino de Mont-Tremblant
-            provides a cozy and inviting gaming atmosphere. The casino floor features a well-rounded
-            selection of slot machines, various table games, and poker tables, offering something for
-            every gambler&#39;s preference. The friendly and accommodating staff adds to the warm and
-            welcoming atmosphere.</p>
-          <h3>Scenic Setting:</h3>
-          <p>One of the most exceptional features of Casino de Mont-Tremblant is its enchanting
-            location in the heart of the Laurentians. Surrounded by the natural beauty of Mont-
-            Tremblant, visitors can enjoy stunning views of the mountains and forests. The resort
-            seamlessly integrates its architecture with the surrounding environment, making it a
-            tranquil escape from the hustle and bustle of the city.</p>
-          <h3>Dining Options:</h3>
-          <p>Casino de Mont-Tremblant boasts a selection of dining options, ranging from casual to
-            upscale. Le Charlevoix Restaurant is a highlight, offering a gourmet menu that incorporates
-            locally sourced ingredients. It&#39;s the perfect place to savor a delicious meal after a day of
-            gaming.</p>
-          <h3>Entertainment</h3>
-          <p>While the primary focus at Casino de Mont-Tremblant is gaming, the resort occasionally
-            hosts live entertainment and shows, which can add another layer of enjoyment to your visit.
-            Be sure to check their event schedule to see if there&#39;s a performance or event happening
-            during your stay.</p>
-          <h3>Spa and Relaxation:</h3>
-          <p>The resort is adjacent to the exquisite Fairmont Tremblant, which offers a wide range of spa
-            treatments, a hot tub, and an outdoor pool. After a day of gaming, unwinding with a
-            massage or relaxation in the pool is a perfect way to rejuvenate.</p>
-          <h3>Location:</h3>
-          <p>Casino de Mont-Tremblant&#39;s location is a true highlight, as it&#39;s part of the Mont-Tremblant
-            resort area. In addition to gaming and relaxation, you can explore the vibrant Mont-
-            Tremblant Village, enjoy outdoor activities in the stunning surroundings, and indulge in a
-            variety of recreational options, including skiing in the winter and hiking in the summer.</p>
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>Casino de Mont-Tremblant:</h3>
+            <p>A Charming Gaming Retreat in the Laurentian Mountains
+              Casino de Mont-Tremblant, nestled in the picturesque Laurentian Mountains of Quebec,
+              offers a unique and intimate gaming experience for visitors from Canada seeking a tranquil
+              yet thrilling retreat.</p>
+            <h3>Gaming Experience:</h3>
+            <p>Despite its smaller scale compared to some larger casinos, Casino de Mont-Tremblant
+              provides a cozy and inviting gaming atmosphere. The casino floor features a well-rounded
+              selection of slot machines, various table games, and poker tables, offering something for
+              every gambler&#39;s preference. The friendly and accommodating staff adds to the warm and
+              welcoming atmosphere.</p>
+            <h3>Scenic Setting:</h3>
+            <p>One of the most exceptional features of Casino de Mont-Tremblant is its enchanting
+              location in the heart of the Laurentians. Surrounded by the natural beauty of Mont-
+              Tremblant, visitors can enjoy stunning views of the mountains and forests. The resort
+              seamlessly integrates its architecture with the surrounding environment, making it a
+              tranquil escape from the hustle and bustle of the city.</p>
+            <h3>Dining Options:</h3>
+            <p>Casino de Mont-Tremblant boasts a selection of dining options, ranging from casual to
+              upscale. Le Charlevoix Restaurant is a highlight, offering a gourmet menu that incorporates
+              locally sourced ingredients. It&#39;s the perfect place to savor a delicious meal after a day of
+              gaming.</p>
+            <h3>Entertainment</h3>
+            <p>While the primary focus at Casino de Mont-Tremblant is gaming, the resort occasionally
+              hosts live entertainment and shows, which can add another layer of enjoyment to your visit.
+              Be sure to check their event schedule to see if there&#39;s a performance or event happening
+              during your stay.</p>
+            <h3>Spa and Relaxation:</h3>
+            <p>The resort is adjacent to the exquisite Fairmont Tremblant, which offers a wide range of spa
+              treatments, a hot tub, and an outdoor pool. After a day of gaming, unwinding with a
+              massage or relaxation in the pool is a perfect way to rejuvenate.</p>
+            <h3>Location:</h3>
+            <p>Casino de Mont-Tremblant&#39;s location is a true highlight, as it&#39;s part of the Mont-Tremblant
+              resort area. In addition to gaming and relaxation, you can explore the vibrant Mont-
+              Tremblant Village, enjoy outdoor activities in the stunning surroundings, and indulge in a
+              variety of recreational options, including skiing in the winter and hiking in the summer.</p>
             <h3>Conclusion:</h3>
             <p>Casino de Mont-Tremblant is a hidden gem for visitors from Canada seeking a different kind
               of gaming experience. The casino&#39;s cozy and intimate setting, combined with its stunning
@@ -107,15 +107,15 @@
               the serene beauty of the Laurentian Mountains, Casino de Mont-Tremblant offers a distinct
               and memorable experience. Please verify the latest information and offerings, as they may
               evolve over time. Enjoy your visit to this charming mountain retreat!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://casinos.lotoquebec.com/fr/monttremblant" target="_blank">Visit</a>
+          </div>
         </div>
-        <div class="resturent-button new">
-          <a href="https://casinos.lotoquebec.com/fr/monttremblant" target="_blank">Visit</a>
-      </div>
       </div>
     </div>
   </div>
-</div>
-<!-- site-casinodetail-end -->
+  <!-- site-casinodetail-end -->
 
   <!-- site footer start -->
   <div class="footer">
@@ -146,12 +146,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
