--- a/contact-us.html
+++ b/contact-us.html
@@ -58,50 +58,50 @@
 
   <!-- site contactbanner end -->
 
-   <!-- site contactform start -->
-   <section class="contact__main">
+  <!-- site contactform start -->
+  <section class="contact__main">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="about_us_content">
-                    <form action="..">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input type="text" id="name" class="input-control">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" id="email" class="input-control">
-                                </div>
-                            </div>
-
-                        </div>
-
-
-                        <div class="form-group">
-                            <label for="phone">Your phone:</label>
-                            <input type="text" id="phone" class="input-control">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea name="Message" id="message" cols="20" rows="8" class="input-control"></textarea>
-                        </div>
-
-                        <div class="form-group text-center">
-                            <button class="submit-btn">submit</button>
-                        </div>
-                    </form>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="about_us_content">
+            <form action="..">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" class="input-control">
+                  </div>
                 </div>
-            </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" class="input-control">
+                  </div>
+                </div>
+
+              </div>
+
+
+              <div class="form-group">
+                <label for="phone">Your phone:</label>
+                <input type="text" id="phone" class="input-control">
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="Message" id="message" cols="20" rows="8" class="input-control"></textarea>
+              </div>
+
+              <div class="form-group text-center">
+                <button class="submit-btn">submit</button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
-</section>
-<!-- site contactform end -->
+  </section>
+  <!-- site contactform end -->
 
   <!-- site footer start -->
   <div class="footer">
@@ -132,12 +132,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
