--- a/fallsview-casino.html
+++ b/fallsview-casino.html
@@ -57,8 +57,8 @@
 
   <!-- site-fallsview-end -->
 
-   <!-- site-casinodetail-start -->
-   <div class="casinodetail">
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -101,19 +101,19 @@
             <p>SOne of the outstanding features of Fallsview Casino Resort is its location near the world-
               famous Niagara Falls. The resort offers breathtaking views of the falls and the surrounding
               area, adding to the enchantment of your visit.</p>
-              <h3>Conclusion:</h3>
-              <p>Fallsview Casino Resort is a premium destination for visitors from Canada and beyond,
-                offering an extraordinary blend of gaming, entertainment, luxury, and relaxation. Whether
-                you&#39;re looking to try your luck at the casino, enjoy a gourmet meal, or revel in a world-class
-                show, this resort has it all. The attentive staff, stunning surroundings, and the proximity to
-                the awe-inspiring Niagara Falls make it a top choice for those in search of a truly remarkable
-                and memorable experience. As with any resort, remember to check for the latest
-                information and updates, as offerings and events may evolve over time. Enjoy your stay at
-                Fallsview Casino Resort!</p>
+            <h3>Conclusion:</h3>
+            <p>Fallsview Casino Resort is a premium destination for visitors from Canada and beyond,
+              offering an extraordinary blend of gaming, entertainment, luxury, and relaxation. Whether
+              you&#39;re looking to try your luck at the casino, enjoy a gourmet meal, or revel in a world-class
+              show, this resort has it all. The attentive staff, stunning surroundings, and the proximity to
+              the awe-inspiring Niagara Falls make it a top choice for those in search of a truly remarkable
+              and memorable experience. As with any resort, remember to check for the latest
+              information and updates, as offerings and events may evolve over time. Enjoy your stay at
+              Fallsview Casino Resort!</p>
           </div>
           <div class="resturent-button new">
             <a href="https://fallsviewcasinoresort.com" target="_blank">Visit</a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -150,12 +150,10 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Kontaktinfo</h3>
-            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
+            <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
-                <a href="tel:+4551797719">+45 51 79 77 19</a>
+                <a href="mailto:">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
