--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -269,7 +269,7 @@
             <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <a href="mailto:">info@gigacasinos.com</a>
+                <a href="mailto:info@gigacasinos.com">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
