--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section class="threetiles">
     <div class="container">
       <div class="threetiles-title">
-        <h2>Three Tiles of the casinos</h2>
+        <h2>Casinos</h2>
       </div>
       <div class="row">
         <div class="col-lg-4 col-sm-12">
@@ -251,7 +251,7 @@
             <h3>Email</h3>
             <div class="footer-mails">
               <div class="mails-names">
-                <a href="mailto:">info@gigacasinos.com</a>
+                <a href="mailto:info@gigacasinos.com">info@gigacasinos.com</a>
               </div>
             </div>
           </div>
