--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -63,7 +63,7 @@
   <section class="terms">
     <div class="container">
       <div class="content-wrap">
-        <h4>Welcome to gigacasinos.com!</h4>
+        <h4>Welcome to Gigacasinos.com!</h4>
         <p>These terms and conditions outline the rules and regulations for the use of
           gigacasinos.com&#39;s Website, located at gigacasinos.com.</p>
         <p>By accessing this website we assume you accept these terms and conditions. Do not
@@ -253,7 +253,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-links">
-            <h3>Linker</h3>
+            <h3>Menu</h3>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="top-casinos.html">Top casinos</a></li>
