--- a/contact-us.html
+++ b/contact-us.html
@@ -61,6 +61,7 @@
   <!-- site contactform start -->
   <section class="contact__main">
     <div class="container">
+      <h2>Feel free to reach out Gigacasinos !</h2>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="about_us_content">
@@ -78,10 +79,7 @@
                     <input type="email" id="email" class="input-control">
                   </div>
                 </div>
-
               </div>
-
-
               <div class="form-group">
                 <label for="phone">Your phone:</label>
                 <input type="text" id="phone" class="input-control">
@@ -119,7 +117,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-links">
-            <h3>Linker</h3>
+            <h3>Menu</h3>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="top-casinos.html">Top casinos</a></li>
