--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -190,7 +190,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-links">
-            <h3>Linker</h3>
+            <h3>Menu</h3>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="top-casinos.html">Top casinos</a></li>
